# bewise_test_1

./: .env.template  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  tests.yml
src/: Dockerfile  dependencies.py  docker-compose.yml  endpoints.py  exceptions.py  main.py  pyproject.toml  requirements.txt  schemas.py  services.py
src/alembic/versions/: 4dc6ebe68ce6_create_question_table.py
src/app/: dependencies.py  exceptions.py  main.py  schemas.py  services.py
src/app/alembic/versions/: 16c31b7819e8_.py  4dc6ebe68ce6_.py
src/app/api/: endpoints.py
src/app/core/: db.py  settings.py
src/app/models/: __init__.py  base.py  questions.py
src/core/: db.py  settings.py
src/models/: __init__.py  base.py
src/tests/: conftest.py
src/tests/test_services/: test_fetch_and_insert_questions.py  test_get_last_question.py  test_insert_questions.py
