[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Rezuan Dzibov <rezuan.dzbov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
faker = "^18.9.0"
pytest-mock = "^3.10.0"
pytest-httpserver = "^1.0.8"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length=120
exclude = ["src/models/__init__.py"]

[tool.pytest.ini_options]
pythonpath=["src"]
asyncio_mode= "auto"